# editor-core

./: .gitignore  Cargo.toml  MISSING-FEATURES.md  README.md  README.zh.md  ROADMAP.md  editor-ui-component.md  ui-performance.md  visual-row-improvements.md
crates/editor-core/: Cargo.toml  README.md  README.zh.md
crates/editor-core-ffi/: Cargo.toml  README.md
crates/editor-core-ffi/examples/: abi_v1_typed.rs
crates/editor-core-ffi/include/: editor_core_ffi.h
crates/editor-core-ffi/src/: lib.rs
crates/editor-core-ffi/tests/: abi_v1.rs  json_expand_selection_by.rs  json_word_boundary_config.rs
crates/editor-core-highlight-simple/: Cargo.toml
crates/editor-core-highlight-simple/src/: lib.rs
crates/editor-core-lang/: Cargo.toml
crates/editor-core-lang/src/: lib.rs
crates/editor-core-lsp/: Cargo.toml  README.md  README.zh.md
crates/editor-core-lsp/examples/: bridges_v1.rs  symbols_v1.rs
crates/editor-core-lsp/src/: editor.rs  lib.rs  lsp_client.rs  lsp_completion.rs  lsp_decorations.rs  lsp_events.rs  lsp_highlights.rs  lsp_locations.rs  lsp_symbols.rs  lsp_sync.rs  lsp_text_edits.rs  lsp_transport.rs  lsp_uri.rs  workspace_sync.rs
crates/editor-core-lsp/tests/: completion_apply.rs  diagnostics_processing_edits.rs  document_highlights_style_layer.rs  document_links_and_code_lens.rs  inlay_hints_decorations.rs  stage5_validation.rs  symbols.rs
crates/editor-core-render-skia/: Cargo.toml
crates/editor-core-render-skia/src/: lib.rs
crates/editor-core-sublime/: Cargo.toml  README.md  README.zh.md
crates/editor-core-sublime/src/: lib.rs  processor.rs
crates/editor-core-sublime/src/sublime_syntax/: compiler.rs  definition.rs  engine.rs  error.rs  mod.rs  scope.rs  set.rs
crates/editor-core-sublime/tests/: sublime_syntax_toml.rs
crates/editor-core-treesitter/: Cargo.toml  README.md
crates/editor-core-treesitter/examples/: rust_highlight.rs
crates/editor-core-treesitter/src/: lib.rs  processor.rs
crates/editor-core-treesitter/tests/: treesitter_processor.rs
crates/editor-core-treesitter/tests/fixtures/: rust_sample.rs
crates/editor-core-ui/: Cargo.toml
crates/editor-core-ui-ffi/: Cargo.toml
crates/editor-core-ui-ffi/include/: editor_core_ui_ffi.h
crates/editor-core-ui-ffi/src/: lib.rs
crates/editor-core-ui/benches/: ui_pipeline.rs
crates/editor-core-ui/src/: lib.rs
crates/editor-core-ui/tests/: ime_undo_grouping_tests.rs  line_selection_tests.rs  paragraph_selection_tests.rs
crates/editor-core/benches/: performance.rs
crates/editor-core/examples/: command_interface.rs  comment_toggle.rs  composed_snapshot.rs  folding_stability.rs  line_ops.rs  multiview_workspace.rs  performance_milestones.rs  state_management.rs  workspace_search_apply.rs
crates/editor-core/src/: commands.rs  decorations.rs  delta.rs  diagnostics.rs  intervals.rs  layout.rs  lib.rs  line_ending.rs  line_index.rs  processing.rs  search.rs  selection_set.rs  snapshot.rs  state.rs  storage.rs  symbols.rs  text.rs  workspace.rs
crates/editor-core/tests/: command_executor_commands.rs  comment_toggle.rs  composed_snapshot.rs  decorations.rs  diagnostics.rs  expand_selection_by.rs  find_replace.rs  folding_stability.rs  incremental_viewport_consistency.rs  indentation.rs  insert_text_empty.rs  integration_test.rs  line_endings.rs  line_ops.rs  multiview_workspace.rs  rect_selection.rs  stage1_validation.rs  stage2_validation.rs  stage3_validation.rs  stage4_validation.rs  stage6_validation.rs  symbols.rs  text_delta_test.rs  undo_redo.rs  unicode_segmentation.rs  visual_cursor_movement.rs  visual_row_improvements.rs  word_boundary_config.rs  workspace.rs  workspace_search_apply.rs  wrap_indent.rs
crates/editor-core/tests/fixtures/: cursor_move_test.txt  cursor_test.txt  demo_file.txt  test_output.txt  wrap_test.txt
crates/tui-editor/: Cargo.toml
crates/tui-editor/src/: main.rs
docs/: DESIGN.md  DESIGN.zh.md  abi-v1-draft.md
swift/: Package.swift  README.md  editor-component.md
swift/Plugins/EditorCoreRustBuildPlugin/: plugin.swift
swift/Sources/AttoEditor/: AttoAppDelegate.swift  AttoCommandPaletteController.swift  AttoEditorAreaViewController.swift  AttoFileExplorerViewController.swift  AttoFormat.swift  AttoStatusBarView.swift  AttoTabBarView.swift  AttoWindowSizing.swift  AttoWorkspaceFileIndex.swift  main.swift
swift/Sources/EditCoreUIDemo/: main.swift
swift/Sources/EditorComponentDemo/: main.swift
swift/Sources/EditorComponentKit/: EditorCommand.swift  EditorCommandDispatcher.swift  EditorComponentView.swift  EditorConfiguration.swift  EditorCoreFFIEngine.swift  EditorCoreFFILibrary.swift  EditorEngineProtocol.swift  EditorGutterView.swift  EditorInteractionProviders.swift  EditorKeybindingRegistry.swift  EditorMinimapView.swift  EditorOffsetTranslator.swift  EditorStyleRendering.swift  EditorTextView.swift  EditorTypes.swift  MockEditorEngine.swift
swift/Sources/EditorCoreAppKit/: EditorCoreCoordinateMapping.swift  EditorCoreSkiaMinimapContainer.swift  EditorCoreSkiaMinimapView.swift  EditorCoreSkiaScrollContainer.swift  EditorCoreSkiaTheme.swift  EditorCoreSkiaView.swift  EditorCoreTextView.swift  SkiaRasterCGImage.swift
swift/Sources/EditorCoreAppKitDemo/: main.swift
swift/Sources/EditorCoreFFI/: DynamicLibrary.swift  EditorCoreFFIError.swift  EditorCoreFFILibrary.swift  EditorState.swift  FFITypes.swift  JSON.swift  LSPBridge.swift  SublimeProcessor.swift  TreeSitterProcessor.swift  ViewportBlob.swift  Workspace.swift
swift/Sources/EditorCoreFFIDemo/: main.swift
swift/Sources/EditorCoreSkiaAppKitDemo/: main.swift
swift/Sources/EditorCoreUI/: EditCoreUI.swift  EditorCoreSkiaScrollContainer.swift  EditorCoreSkiaThemedScroller.swift  EditorCoreSkiaView.swift
swift/Sources/EditorCoreUIFFI/: DynamicLibrary.swift  EditorCoreUIFFIError.swift  EditorCoreUIFFILibrary.swift  EditorUI.swift  Types.swift
swift/Tests/AttoEditorTests/: AttoDirtyStateTests.swift  AttoFileExplorerDoubleClickTests.swift  AttoWindowSizingTests.swift
swift/Tests/EditorComponentKitTests/: EditorComponentFeatureTests.swift  EditorComponentScaffoldTests.swift  (+4 more)
(+69 files in other folders)
