[package]
name = "editor-core-ffi"
version.workspace = true
description = "C/FFI bridge for editor-core and integrations (LSP, Sublime syntax, Tree-sitter)."
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["editor", "ffi", "lsp", "tree-sitter", "sublime-syntax"]
categories = ["text-editors", "api-bindings"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
editor-core = { version = "0.3.0", path = "../editor-core" }
editor-core-lsp = { version = "0.3.0", path = "../editor-core-lsp" }
editor-core-sublime = { version = "0.3.0", path = "../editor-core-sublime" }
editor-core-treesitter = { version = "0.3.0", path = "../editor-core-treesitter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.26"
tree-sitter-language = "0.1"
