[package]
name = "editor-core-lang"
version.workspace = true
description = "Language configuration helpers for editor-core (comments, etc.)"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

