[package]
name = "editor-core-lsp"
version = "0.1.0"
description = "LSP integration for editor-core."
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["editor", "text-editor", "unicode", "lsp", "headless"]
categories = ["text-editors", "text-processing"]
readme = "README.md"

[dependencies]
editor-core = { version = "0.1.0", path = "../editor-core" }
serde_json = "1.0"
