[package]
name = "editor-core-sublime"
version = "0.2.0"
description = "Sublime syntax highlighting and folding integration for editor-core."
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["editor", "text-editor", "unicode", "lsp", "headless"]
categories = ["text-editors", "text-processing"]
readme = "README.md"

[dependencies]
editor-core = { version = "0.2.0", path = "../editor-core" }
onig = "6.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"

