[package]
name = "editor-core-ui"
version.workspace = true
description = "UI composition layer for editor-core (input mapping + rendering)."
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["editor", "ui"]
categories = ["text-editors"]

[dependencies]
editor-core = { version = "0.3.0", path = "../editor-core" }
editor-core-render-skia = { version = "0.3.0", path = "../editor-core-render-skia" }
editor-core-sublime = { version = "0.3.0", path = "../editor-core-sublime" }
editor-core-treesitter = { version = "0.3.0", path = "../editor-core-treesitter" }
editor-core-lsp = { version = "0.3.0", path = "../editor-core-lsp" }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1"

[[bench]]
name = "ui_pipeline"
harness = false
