[package]
name = "editor-core"
version = "0.1.1"
description = "A headless editor engine focused on state management, Unicode-aware text measurement, and coordinate conversion."
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["editor", "text-editor", "unicode", "lsp", "headless"]
categories = ["text-editors", "text-processing"]
readme = "README.md"

[dependencies]
unicode-segmentation = "1.12"
unicode-width = "0.2"
ropey = "1.6"
regex = "1.11"

[dev-dependencies]
rand = "0.8"
